# grapejuice

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  conanprofile.txt
base/: CMakeLists.txt
base/include/: Data.h  currency.h  databasemysql.h  errc.h  net.h  netmanager.h  packages.h  query.h
base/src/: currency.cpp  databasemysql.cpp  errc.cpp  netmanager.cpp  packages.cpp
doc/: .~lock.poftext.txt#  poftext.txt
include/: AccountManager.h  Application.h  DataManager.h  PharmacyManager.h  ProductManager.h  SaleManager.h  connection_pool.h  grapepch.h  serialiser.h  zip.h
src/: AccountManager.cpp  Application.cpp  DataManager.cpp  PharmacyManager.cpp  ProductManager.cpp  SaleManager.cpp  connection_pool.cpp  main.cpp
